; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2conn.c_vlc_h2_stream_fatal.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2conn.c_vlc_h2_stream_fatal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_h2_stream = type { i32, i32, i32, i32 }

@EPROTO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vlc_h2_stream*, i32)* @vlc_h2_stream_fatal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_h2_stream_fatal(%struct.vlc_h2_stream* %0, i32 %1) #0 {
  %3 = alloca %struct.vlc_h2_stream*, align 8
  %4 = alloca i32, align 4
  store %struct.vlc_h2_stream* %0, %struct.vlc_h2_stream** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %3, align 8
  %6 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %5, i32 0, i32 0
  store i32 1, i32* %6, align 4
  %7 = load i32, i32* @EPROTO, align 4
  %8 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %3, align 8
  %9 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %8, i32 0, i32 3
  store i32 %7, i32* %9, align 4
  %10 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %3, align 8
  %11 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %3, align 8
  %14 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @vlc_h2_stream_error(i32 %12, i32 %15, i32 %16)
  ret i32 %17
}

declare dso_local i32 @vlc_h2_stream_error(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
